fixed positions, changed color design

--- a/public/style.css
+++ b/public/style.css
@@ -2,87 +2,69 @@
     font-family: Galindo;
     src: url('Galindo-Regular.ttf');
 }
+
 body {
-    width: 100vw;
-    height: 100vh;
+    margin: 0px;
     font-family: Galindo,sans-serif;
+    display: block;
+    background: #8e8e8d;
 }
-
-
+head{
+    width: auto;
+    height: auto;
+}
+.text-container{
+}
 .text-content{
     position: static;
     width: auto;
     height: auto;
-    left: calc(50% - 90vw/2 - 20vw);
-    top: 61px;
     font-family: "Galindo",sans-serif;
     font-weight: normal;
     font-size: 24px;
     line-height: 34px;
     text-align: center;
 
-    color: #000000;
-
-
     /* Inside Auto Layout */
 
     flex: none;
-    order: 1;
     align-self: flex-start;
-    margin: 0 0;
+    margin: 0;
 }
-.text-container {
+.data{
+    list-style: none;
 
-    position: absolute;
-    width: 100vw;
-    height: 100vh;
-    left: 0;
-    top: 76px;
-
-    background: linear-gradient(180deg, #FFFFFF 0%, rgba(199, 202, 200, 0.859375) 16.15%, rgba(143, 143, 143, 0.97) 31.77%, rgba(95, 95, 95, 0.79) 61.98%, rgba(72, 72, 72, 0.702973) 73.96%, rgba(41, 41, 41, 0.65) 81.25%, rgba(7, 7, 7, 0.78) 94.27%);
-    opacity: 0.5;
-    border: 0  solid #909090;
-    box-sizing: border-box;
-}
-
-.nav-container {
-
-    display: flex;
-
-
-    position: absolute;
-    width: 100vw;
-    height: 76px;
-    top: 0;
-
-    background: #212821;
 }
 
 .nav-items {
     display: flex;
-    position: absolute;
+    position: static;
     width: 100vw;
-    height: 10vh;
+    height: 50px;
     left: 0;
     top: 0;
 
+    background: #212821;
 
     /* Inside Auto Layout */
 
 }
 .text-and-picture  {
-    display: flex;
     justify-content: space-evenly;
     align-items: stretch;
 }
-
+.panel{
+    background: #363636;
+    height: 50px;
+    width: 100vw;
+    position: fixed;
+    top: 0px;
+    z-index: 1;
+}
 header p {
     width: 70vw;
     height: auto;
     left: calc(50% - 90vw / 2 - 30vw);
-    top: auto;
-    font-style: normal;
-    font-weight: normal;
     font-size: 24px;
     line-height: 34px;
     text-align: center;
@@ -96,31 +78,34 @@ header p {
     order: 1;
     align-self: flex-start;
     margin: 0 0;
+
 }
 
 .me-image {
 
-    position: absolute;
+    background: #000000;
+    background-blend-mode: unset;
+    z-index:1;
+    color:red;
+    position: static;
     width: auto;
     height: auto;
-    left: calc(30% - 25vw/2 + 40vw);
-    top: auto;
+    left: calc(90vw);
 
 
 }
 
 .text-navigation {
-    top:40px;
     display: flex;
     flex-direction: row;
     position: absolute;
-    width: 90vw;
+    width: 100vw;
     height: 35px;
     left: 0;
     z-index: 1;
     list-style: none;
     justify-content: space-evenly;
-    
+
 
 }
 
@@ -148,12 +133,21 @@ header p {
     display: flex;
     flex-direction: row;
     padding: 0;
-
-    position: absolute;
+    position: fixed;
+    z-index: 2;
     width: 96px;
-    height: 32px;
-    left: 10px;
-    top:0;
-    z-index: 1;
+    height: 64px;
 }
-
+.icon-navigation li a{
+    width: 32px;
+    height: 32px;
+}
+.data{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+}
+.data li {
+    border-color: black;
+    border-style: solid;
+}
