--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@ body {
     margin: 0px;
     font-family: Galindo,sans-serif;
     display: block;
-    background: #8e8e8d;
+    background: #214c21;
 }
 head{
     width: auto;
@@ -44,7 +44,6 @@ head{
     left: 0;
     top: 0;
 
-    background: #212821;
 
     /* Inside Auto Layout */
 
@@ -61,8 +60,7 @@ head{
     top: 0px;
     z-index: 1;
 }
-header p {
-    width: 70vw;
+p {
     height: auto;
     left: calc(50% - 90vw / 2 - 30vw);
     font-size: 24px;
@@ -82,17 +80,18 @@ header p {
 }
 
 .me-image {
-
-    background: #000000;
     background-blend-mode: unset;
     z-index:1;
-    color:red;
     position: static;
     width: auto;
     height: auto;
     left: calc(90vw);
 
 
+}
+.textpic{
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
 .text-navigation {
@@ -119,12 +118,7 @@ header p {
 
 }
 
-.text-navigation li:first-child {
-    font-family: Galindo,sans-serif;
 
-    color: #FFCC00;
-
-}
 
 .icon-navigation {
 
@@ -150,4 +144,7 @@ header p {
 .data li {
     border-color: black;
     border-style: solid;
+}
+h1{
+    margin-top: 100px;
 }
