--- a/public/style.css
+++ b/public/style.css
@@ -53,6 +53,7 @@ head{
     align-items: stretch;
 }
 .panel{
+    color: black;
     background: #363636;
     height: 50px;
     width: 100vw;
@@ -78,7 +79,11 @@ p {
     margin: 0 0;
 
 }
-
+.List{
+    display: flex;
+    flex-direction: column;
+    list-style: none;
+}
 .me-image {
     background-blend-mode: unset;
     z-index:1;
@@ -89,7 +94,10 @@ p {
 
 
 }
-.textpic{
+.about_content{
+    display: flex;
+    list-style: none;
+
     flex-direction: row;
     justify-content: space-evenly;
 }
@@ -104,7 +112,7 @@ p {
     z-index: 1;
     list-style: none;
     justify-content: space-evenly;
-
+    color: black;
 
 }
 
