--- a/public/style.css
+++ b/public/style.css
@@ -106,6 +106,7 @@ p {
     display: flex;
     flex-direction: row;
     position: absolute;
+    top: 10px;
     width: 100vw;
     height: 35px;
     left: 0;
