--- a/public/style.css
+++ b/public/style.css
@@ -10,12 +10,14 @@ body {
     margin: 0;
     display: block;
     background: #bbbbbb;
+    background-image: url("/pict/iss063e076166.jpg");
 }
 head{
     width: auto;
     height: auto;
 }
 .text-content{
+
     font-family: 'Open Sans', sans-serif;
 
     position: static;
@@ -62,9 +64,17 @@ head{
     top: 0;
     z-index: 1;
 }
+.text-content{
+    box-sizing: border-box;
+    backdrop-filter: blur(5px);
+    background-color: rgba(255, 255, 255, 0.5);
+    width: min-content;
+    margin: 0 auto;
+}
 p {
-    height: auto;
-    left: calc(50% - 90vw / 2 - 30vw);
+    white-space: nowrap;
+    width: 100%;
+
     font-size: 24px;
     line-height: 34px;
     text-align: center;
