--- a/public/style.css
+++ b/public/style.css
@@ -120,11 +120,12 @@ p {
     width: 100vw;
     height: 35px;
     left: 0;
+    margin-top: 0px;
     z-index: 1;
     list-style: none;
     justify-content: space-evenly;
     color: black;
-    font-size: 20px;
+    font-size: 30px;
     font-style: normal;
     font-weight: 600;
 }
@@ -142,6 +143,7 @@ p {
 .icon-navigation {
 
     /* Auto Layout */
+    font-size: 30px;
 
     display: flex;
     flex-direction: row;
