--- a/public/style.css
+++ b/public/style.css
@@ -7,7 +7,7 @@
 }
 
 body {
-
+    display: grid;
     width: 100%;
     height: 100%;
     background: #bbbbbb;
@@ -62,7 +62,7 @@ head{
     color: black;
 
     backdrop-filter: blur(15px);
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.5);
     height: 50px;
     width: 100vw;
     position: fixed;
@@ -72,7 +72,7 @@ head{
 .text-content{
     box-sizing: border-box;
     backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.4);
+    background-color: rgba(255, 255, 255, 0.5);
     width: min-content;
     margin: 0 auto;
 }
