--- a/public/style.css
+++ b/public/style.css
@@ -7,18 +7,15 @@
 }
 
 body {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    background: #bbbbbb;
+    position: static;
+    height: auto;
     background-image: url("/pict/small-memory-8k-2a-7680x4320.jpg");
     background-repeat: no-repeat;
-    background-size:100%;
+    background-size: 100% auto;
+    background-attachment: fixed;
+
 }
-head{
-    width: auto;
-    height: auto;
-}
+
 .text-content{
 
     font-family: 'Open Sans', sans-serif;
@@ -58,27 +55,39 @@ head{
     justify-content: space-evenly;
     align-items: stretch;
 }
-.panel{
-    color: black;
-
+.email{
     backdrop-filter: blur(15px);
-    background-color: rgba(255, 255, 255, 0.5);
-    height: 50px;
-    width: 100vw;
+    background-color: rgba(255, 255, 255, 0.4);
+    width: min-content;
+    font-size: 32px;
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+}
+.panel{
+    display: flex;
+    color: black;
+    flex-direction: row;
+    justify-content: space-between;
+    margin: 0;
+    backdrop-filter: blur(15px);
+    background-color: rgba(255, 255, 255, 0.4);
+    height: 2em;
+    width: 100%;
     position: fixed;
     top: 0;
-    z-index: 1;
+    list-style: none;
 }
 .text-content{
     box-sizing: border-box;
     backdrop-filter: blur(5px);
-    background-color: rgba(255, 255, 255, 0.5);
+    background-color: rgba(255, 255, 255, 0.4);
     width: min-content;
     margin: 0 auto;
 }
 p {
     white-space: nowrap;
-    width: 100%;
+    width: auto;
 
     font-size: 30px;
     line-height: 34px;
@@ -106,7 +115,6 @@ p {
     position: static;
     width: auto;
     height: auto;
-    left: calc(90vw);
 
 
 }
@@ -121,12 +129,8 @@ p {
 .text-navigation {
     display: flex;
     flex-direction: row;
-    position: absolute;
     width: 100vw;
     height: 35px;
-    left: 0;
-    margin-top: 0px;
-    z-index: 1;
     list-style: none;
     justify-content: space-evenly;
     font-size: 30px;
@@ -154,8 +158,7 @@ p {
     padding: 0;
     position: fixed;
     z-index: 2;
-    width: 138px;
-    height: 32px;
+
 }
 .icon-navigation li a{
     width: 32px;
@@ -172,5 +175,5 @@ p {
 h1{
     font-family: 'Playfair Display SC',sans-serif;
 
-    margin-top: 100px;
+    margin-top: 80px;
 }
