--- a/public/style.css
+++ b/public/style.css
@@ -20,6 +20,7 @@ body {
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
     #backdrop-filter: blur(5px);
+    word-wrap: break-word;
     background-color: rgba(255, 255, 255, 0.4);
     width: min-content;
     margin: 0 auto;
