--- a/public/style.css
+++ b/public/style.css
@@ -20,14 +20,13 @@ body {
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
     #backdrop-filter: blur(5px);
-    word-wrap: break-word;
     background-color: rgba(255, 255, 255, 0.4);
     width: min-content;
     margin: 0 auto;
     position: center;
     height: min-content;
     font-weight: normal;
-    font-size: 20px;
+    font-size: 30px;
     text-align: center;
     top: 35px;
     flex: none;
@@ -58,9 +57,8 @@ body {
     background-color: rgba(255, 255, 255, 0.4);
     width: min-content;
     font-size: 30px;
-    position:static;
-    margin: 35px 0;
-
+    position:fixed;
+    top: 35px;
 }
 h3{
     margin: 0 0;
@@ -88,10 +86,9 @@ h1{
 }
 
 p {
-    white-space: nowrap;
-    width: auto;
-
-    font-size: 20px;
+    width: 60vw;
+    white-space: pre-wrap;
+    font-size: 30px;
     text-align: center;
 
     color: #000000;
