--- a/public/style.css
+++ b/public/style.css
@@ -154,7 +154,7 @@ img {
 
     /* Auto Layout */
     font-size: 30px;
-
+    background-color: rgba(255, 255, 255, 0.9);
     display: flex;
     flex-direction: row;
     padding: 0;
